--- a/admin/src/app/globals.css
+++ b/admin/src/app/globals.css
@@ -43,6 +43,10 @@
   --color-hover: #2d2d2d;
   --color-primary: #018ABE;
   --color-secondary: #05AFF0;
+  --color-dark: #3703C8;
+  --color-success: #23d400;
+  --color-danger: #e30008;
+  --color-warning: #FFE900;
 }
 
 /* Typography classes */
