--- a/admin/src/styles/Nav.module.css
+++ b/admin/src/styles/Nav.module.css
@@ -138,11 +138,22 @@
 }
 
 .userImage {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  margin-right: 10px;
-  border: 2px solid var(--color-primary);
+  object-fit: cover;
+}
+
+.userImagePlaceholder {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #e0e0e0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  color: #666;
 }
 
 .userInfo {
@@ -403,5 +414,10 @@
 /* Update existing dark mode styles */
 .darkMode .dropdownIcon {
   color: var(--color-text);
+}
+
+.darkMode .userImagePlaceholder {
+  background-color: #374151;
+  color: #fff;
 }
 
